[tool.poetry]
name = "enefit-forecast-service"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.9"

[tool.poetry.group.web.dependencies]
fastapi = "^0.119.0"
streamlit = "^1.50.0"
requests = "^2.32.5"
uvicorn = "^0.38.0"
pydantic = "^2.12.3"

[tool.poetry.group.git.dependencies]
nb-clean = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
